--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <!-- TabHost必须包含一个 TabWidget和一个FrameLayout -->
 
@@ -20,9 +20,9 @@
 
             <TabWidget
                 android:id="@android:id/tabs"
-                android:layout_alignParentBottom="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
                 android:layout_weight="0"
                 android:orientation="horizontal" />
 
@@ -39,10 +39,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
+
                     <LinearLayout
-                        android:orientation="horizontal"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
                         <Button
                             android:id="@+id/button1"
@@ -54,77 +55,89 @@
                             android:id="@+id/edit1"
                             android:layout_width="250dp"
                             android:layout_height="50dp"
-                            android:hint="想吃点什么？"/>
+                            android:hint="想吃点什么？" />
 
                         <ImageButton
                             android:id="@+id/button2"
                             android:layout_width="30dp"
                             android:layout_height="43dp"
-                            android:src="@mipmap/if_search"/>
+                            android:src="@mipmap/if_search" />
                     </LinearLayout>
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="商家分类"/>
+                        android:text="商家分类" />
+
                     <LinearLayout
-                        android:orientation="horizontal"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
                         <Button
                             android:id="@+id/button21"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="A"/>
+                            android:text="A" />
+
                         <Button
                             android:id="@+id/button22"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="B"/>
+                            android:text="B" />
+
                         <Button
                             android:id="@+id/button23"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="C"/>
+                            android:text="C" />
+
                         <Button
                             android:id="@+id/button24"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="D"/>
+                            android:text="D" />
                     </LinearLayout>
+
                     <LinearLayout
-                        android:orientation="horizontal"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
                         <Button
                             android:id="@+id/button31"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="E"/>
+                            android:text="E" />
+
                         <Button
                             android:id="@+id/button32"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="F"/>
+                            android:text="F" />
+
                         <Button
                             android:id="@+id/button33"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="G"/>
+                            android:text="G" />
+
                         <Button
                             android:id="@+id/button34"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="H"/>
+                            android:text="H" />
                     </LinearLayout>
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="推荐商家"/>
+                        android:text="推荐商家" />
+
                     <ListView
                         android:id="@+id/list_view1"
                         android:layout_width="match_parent"
-                        android:layout_height="330dp">
-                    </ListView>
+                        android:layout_height="330dp"></ListView>
 
                 </LinearLayout>
 
@@ -134,11 +147,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
+
                     <ListView
                         android:id="@+id/list_view2"
                         android:layout_width="match_parent"
-                        android:layout_height="512dp">
-                    </ListView>
+                        android:layout_height="512dp"></ListView>
                 </LinearLayout>
 
                 <LinearLayout
@@ -146,28 +159,31 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+
                     <LinearLayout
-                        android:orientation="horizontal"
-                        android:gravity="center"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
                         <ImageView
                             android:id="@+id/image1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:src="@mipmap/ic_launcher_round"/>
+                            android:src="@mipmap/ic_launcher_round" />
+
                         <TextView
                             android:id="@+id/text3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="abc"
-                            android:textSize="50dp"/>
+                            android:textSize="50dp" />
                     </LinearLayout>
+
                     <ListView
                         android:id="@+id/list_view3"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                    </ListView>
+                        android:layout_height="wrap_content"></ListView>
                 </LinearLayout>
             </FrameLayout>
         </RelativeLayout>
