--- a/app/src/main/res/layout/business_info.xml
+++ b/app/src/main/res/layout/business_info.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_alignParentEnd="true">
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true">
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,9 +24,8 @@
             android:orientation="horizontal">
             <ImageView
                 android:id="@+id/image1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:src="@mipmap/ic_launcher"/>
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -34,9 +34,24 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textSize="25dp"
                     android:text="商家名称"/>
+                <TextView
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="15dp"
+                    android:text="商家简介****************"/>
 
             </LinearLayout>
+            <RatingBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_gravity="center"
+                android:id="@+id/rat"
+                android:rating="3"
+                />
+
         </LinearLayout>
 
     <TabHost
@@ -45,19 +60,22 @@
         android:layout_height="match_parent">
 
         <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:orientation="vertical">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
 
             <!-- TabWidget的id属性必须为 @android:id/tabs -->
 
             <TabWidget
                 android:id="@android:id/tabs"
-                android:layout_alignParentBottom="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
-                android:orientation="horizontal" />
+                android:layout_alignParentBottom="true"
+                android:orientation="horizontal"
+                android:gravity="right|center_vertical"/>
+
 
             <!-- FrameLayout的id属性必须为 @android:id/tabcontent -->
 
@@ -66,6 +84,41 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0">
+
+
+                <LinearLayout
+                    android:id="@+id/view2"
+                    android:layout_width="match_parent"
+                    android:layout_height="490dp"
+                    android:orientation="vertical">
+                    <ListView
+                        android:id="@+id/list_view2"
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp">
+                    </ListView>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/view3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:gravity="center"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+
+                    </LinearLayout>
+                    <ListView
+                        android:id="@+id/list_view3"
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp">
+
+
+                    </ListView>
+                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/view1"
@@ -95,42 +148,9 @@
                     <ListView
                         android:id="@+id/list_view1"
                         android:layout_width="match_parent"
-                        android:layout_height="330dp">
-                    </ListView>
-
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:id="@+id/view2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-                    <ListView
-                        android:id="@+id/list_view2"
-                        android:layout_width="match_parent"
                         android:layout_height="300dp">
                     </ListView>
-                </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/view3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <LinearLayout
-                        android:orientation="horizontal"
-                        android:gravity="center"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-
-                    </LinearLayout>
-                    <ListView
-                        android:id="@+id/list_view3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                    </ListView>
                 </LinearLayout>
             </FrameLayout>
         </RelativeLayout>
