--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -137,6 +137,16 @@
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:singleLine">true</item>
     </style>
+    <style name="app_tab">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:paddingTop">8dip</item>
+        <item name="android:paddingBottom">4dip</item>
+        <item name="android:button">@null</item>
+    </style>
 
     <style name="radiogroup1">
         <item name="android:layout_width">match_parent</item>
