--- a/app/src/main/res/layout/order_layout.xml
+++ b/app/src/main/res/layout/order_layout.xml
@@ -15,20 +15,24 @@
 
             <Button
                 android:id="@+id/button1"
-                android:layout_width="80dp"
-                android:layout_height="50dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
                 android:text="定位" />
 
             <EditText
                 android:id="@+id/edit1"
-                android:layout_width="250dp"
-                android:layout_height="50dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="7"
+                android:maxLines="1"
                 android:hint="想吃点什么？" />
 
             <ImageButton
                 android:id="@+id/button2"
-                android:layout_width="30dp"
-                android:layout_height="43dp"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
                 android:src="@mipmap/ic_launcher" />
         </LinearLayout>
 
@@ -37,65 +41,14 @@
             android:layout_height="wrap_content"
             android:text="商家分类" />
 
-        <LinearLayout
+        <GridView
+            android:id="@+id/gview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/button21"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="A" />
-
-            <Button
-                android:id="@+id/button22"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="B" />
-
-            <Button
-                android:id="@+id/button23"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="C" />
-
-            <Button
-                android:id="@+id/button24"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="D" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/button31"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="E" />
-
-            <Button
-                android:id="@+id/button32"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="F" />
-
-            <Button
-                android:id="@+id/button33"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="G" />
-
-            <Button
-                android:id="@+id/button34"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="H" />
-        </LinearLayout>
+            android:numColumns="auto_fit"
+            android:columnWidth="80dp"
+            android:stretchMode="columnWidth"
+            ></GridView>
 
         <TextView
             android:layout_width="match_parent"
