--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -12,8 +12,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@drawable/back1">
+        android:layout_height="60dp">
 
         <RelativeLayout
             android:id="@+id/order_layout"
@@ -32,7 +31,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:src="@drawable/common_ic_googleplayservices" />
+                    android:src="@mipmap/if_buy" />
 
                 <TextView
                     android:id="@+id/order_text"
@@ -61,7 +60,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:src="@drawable/common_ic_googleplayservices" />
+                    android:src="@mipmap/if_bill" />
 
                 <TextView
                     android:id="@+id/bill_text"
@@ -90,7 +89,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:src="@drawable/common_ic_googleplayservices" />
+                    android:src="@mipmap/if_my" />
 
                 <TextView
                     android:id="@+id/my_text"
