--- a/app/src/main/res/layout/business_info.xml
+++ b/app/src/main/res/layout/business_info.xml
@@ -58,6 +58,25 @@
     </LinearLayout>
     <ListView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="320dp"
         android:id="@+id/lv"></ListView>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="right"
+        android:orientation="horizontal"
+
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:textSize="20dp"
+            android:text=" 是否购买 "/>
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="match_parent"
+            android:text="确认"
+            android:id="@+id/sure"/>
+    </LinearLayout>
 </LinearLayout>
