--- a/app/src/main/res/layout/payment_main.xml
+++ b/app/src/main/res/layout/payment_main.xml
@@ -18,23 +18,28 @@
         android:textSize="30dp"
         />
 
-    <Spinner
+    <Button
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:id="@+id/spinner" />
+        android:text="选择地址"
+        android:textSize="20dp"
+        android:id="@+id/address" />
+
     <TextView
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:id="@+id/addview"
         android:layout_gravity="center"
-        android:text="显示收货地址"/>
+        android:text="显示收货地址"
+        />
 
     <ListView
         android:layout_width="300dp"
         android:layout_height="150dp"
+        android:layout_weight="0.84"
         android:layout_gravity="center"
-        android:layout_weight="1.01"></ListView>
+        ></ListView>
 
     <Button
         android:layout_width="100dp"
@@ -42,6 +47,7 @@
         android:text="支 付"
         android:textSize="20dp"
         android:layout_gravity="end"
+        android:id="@+id/paybutton"
 
         />
 
